# -pyidevice

./: .flake8  .gitignore  .pre-commit-config.yaml  .pypirc  CHANGELOG.md  CONTRIBUTING.md  IDB安装指南.md  IDB快速入门指南.md  IDB部署完成总结.md  LICENSE  MANIFEST.in  README.md  WDA到IDB迁移指南.md  WDA编译和使用指南.md  automation_example.py  concurrent_example.py  deploy_idb.sh  example.py  iOS自动化工具对比分析.md  idb_alias.sh  idb_example.py  idb_usage_example.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py  stability_example.py  uiautomator2_API对比.md  uiautomator2_aligned_example.py  verify_idb_deployment.py
.github/workflows/: ci.yml
docs/: README.md  installation.md  quickstart.md
docs/api/: README.md
docs/examples/: basic_usage.py  batch_operations.py  ui_automation_idb.py
pyidevice/: __init__.py  batch.py  cache.py  cli.py  config.py  core.py  device.py  exceptions.py  idb.py  monitor.py  parallel.py  performance.py  stability.py  types.py  utils.py  wda.py
tests/: __init__.py  conftest.py
