[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyidevice"
version = "0.1.0"
description = "A comprehensive iOS device automation library based on libimobiledevice"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "pyidevice contributors", email = "pyidevice@example.com"}
]
maintainers = [
    {name = "pyidevice contributors", email = "pyidevice@example.com"}
]
keywords = ["ios", "automation", "testing", "libimobiledevice", "wda", "webdriveragent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
]
requires-python = ">=3.6"
dependencies = [
    "facebook-wda>=1.4.0",
    "requests>=2.20.0",
    "psutil>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
    "mypy>=0.800",
    "sphinx>=3.0.0",
    "sphinx-rtd-theme>=0.5.0",
]
test = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "pytest-mock>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/pyidevice"
Documentation = "https://pyidevice.readthedocs.io/"
Repository = "https://github.com/yourusername/pyidevice"
"Bug Tracker" = "https://github.com/yourusername/pyidevice/issues"

[project.scripts]
pyidevice = "pyidevice.cli:main"

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*"]

[tool.black]
line-length = 127
target-version = ['py36']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.6"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cov=pyidevice",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "requires_device: marks tests that require a physical device",
    "requires_wda: marks tests that require WebDriverAgent",
    "skip_ci: marks tests to skip in CI environment",
]
