[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyidevice"
version = "0.1.0"
description = "A comprehensive iOS device automation library based on libimobiledevice"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "pyidevice contributors", email = "pyidevice@example.com"}
]
maintainers = [
    {name = "pyidevice contributors", email = "pyidevice@example.com"}
]
keywords = ["ios", "automation", "libimobiledevice", "idb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
]
requires-python = ">=3.6"
dependencies = [
    "fb-idb>=2.0.0",
    "requests>=2.20.0",
    "psutil>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=21.0.0",
    "flake8>=3.8.0",
    "mypy>=0.800",
    "sphinx>=3.0.0",
    "sphinx-rtd-theme>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/pyidevice"
Documentation = "https://pyidevice.readthedocs.io/"
Repository = "https://github.com/yourusername/pyidevice"
"Bug Tracker" = "https://github.com/yourusername/pyidevice/issues"

[project.scripts]
pyidevice = "pyidevice.cli:main"

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*"]

[tool.black]
line-length = 127
target-version = ['py36']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.6"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

